# plant-cam

./: .gitignore  README.md  pyproject.toml
plant_cam/: main.py
